# rockerize

./: .gitignore  Cargo.toml  README.md
src/: docker.rs  main.rs  shell.rs
