[package]
name = "rockerize"
description = "Dockerize your rust application easily"
authors = ["Sungjin Han <meinside@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/meinside/rockerize"
repository = "https://github.com/meinside/rockerize"
license = "MIT"
keywords = ["docker"]
categories = ["command-line-utilities"]
default-run = "rockerize"
edition = "2018"
version = "0.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
which = "4.0.1"
